--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="register">Register</string>
     <string name="signUpError">All field is required</string>
     <string name="passwordError">confirm pasword is not same</string>
+    <string name="verificationEmailError">there is no User with that email</string>
 </resources>
