Feat: devloping finished for sign-up, login and reset password parts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="signUpError">All field is required</string>
     <string name="passwordError">confirm pasword is not same</string>
     <string name="verificationEmailError">there is no User with that email</string>
+    <string name="resetPasswordError">passwords are note same!</string>
 </resources>
